fix title alignment

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -4,6 +4,10 @@
 	gap: 0.5rem;
 }
 
+.site-header .site-title {
+	margin-right: auto;
+}
+
 .site-title .site-logo {
 	height: 1.5rem; // adjust
 	width: auto;
